ui/chat/css/_discussion.scss
.mchat {
  &__messages {
    @extend %break-word;

    flex: 1 1 auto;
    max-height: 50vh;

    @include mq-at-least-col3 {
      max-height: none;
    }

    overflow-y: auto;
    overflow-x: hidden;
    cursor: initial;
    font-size: 0.9em;

    li {
      position: relative;
      @include padding-direction(0.5em, 5px, 0.5em, 10px);

      line-height: 1.2em;
      overflow-y: hidden;
      user-select: text;

      &.me {
        border-inline-start: 3px solid $c-secondary-dim;
        padding-inline-start: 7px;
      }

      &.host {
        background-color: $c-chat-host-bg;
      }

      &.mentioned {
        background-color: $c-chat-mention-bg;
      }
    }

    .deleted {
      opacity: 0.5;
    }

    .system {
      display: block;
      opacity: 0.8;
      font-style: italic;
      font-size: 0.9em;
      margin-inline-start: 0;
      text-align: center;
    }

    .color,
    .user-link {
      display: inline-block;
      font-weight: bold;
      padding: 0;
      color: $c-font-dim;
      letter-spacing: -1px;
      padding-inline-end: 0.4em;
      text-overflow: ellipsis;
      vertical-align: bottom;
    }

    .patron {
      font-size: 1.1em;
      width: 1.2em;
      text-align: left;
      color: $c-brag;
    }

    .utitle {
      margin-right: 3px;
    }

    a:not(.user-link) {
      @extend %roboto;
    }

    action {
      display: none;
      position: absolute;
      top: 5px;
      @include inline-end(0);
      cursor: pointer;
      margin-inline-end: 3px;
      padding: 1px 5px;
      opacity: 0.7;
      color: $c-accent;

      &:hover {
        opacity: 1;
      }
    }

    li:hover action {
      display: block;
      text-shadow:
        0 0 2px $c-bg-box,
        0 0 5px $c-bg-box,
        0 0 10px $c-bg-box;
    }

    li.me action {
      display: none !important;
    }

    &.as-mod {
      li:hover {
        background: $m-accent_bg--mix-10;
      }
    }
  }

  a.jump {
    position: absolute;
    top: 5px;
    font-size: medium;
    @include inline-end(5px);
    cursor: pointer;
    margin-inline-end: 3px;
    padding: 1px 5px;
  }

  &__say {
    flex: 0 0 auto;
    border: 0;
    border-top: $border;
    border-radius: 0;
    @include padding-direction(3px, 20px, 3px, 4px);

    &:focus {
      outline: 1px solid $c-primary;
    }

    &.whisper {
      color: $c-good;
      font-weight: bold;
      font-style: italic;
    }
  }
}

